Updated swagger and app.py
